service TrendcoinService {
	rpc Balance (BalanceRequest) returns (BalanceReply) {}
	// all requested transactions must end success or will be rollbacked
	rpc MakeTransactions (MakeTransactionsRequest) returns (MakeTransactionsReply) {}
	rpc TransactionLog (TransactionLogRequest) returns (TransactionLogReply) {}
}

message BalanceRequest {
	uint64 user_id = 1;
}

message BalanceReply {
	int64 balance = 1;
	string error = 2;
}

message TransactionData {
	uint64 source = 1;
	uint64 destination = 2;
	uint64 amount = 3;
	string reason = 4;
	// allows negative balance as a result
	bool allow_credit = 5;
	// allows empty "from" or "to" field
	bool allow_empty_side = 6;
}

message MakeTransactionsRequest {
	repeated TransactionData transactions = 1;
}

message MakeTransactionsReply {
	repeated uint64 transaction_ids = 1;
	string error = 2;
}

message TransactionLogRequest {
	uint64 user_id = 1;
	// if "before" and "after" are undefinied default limit is 20
	// for bounded request 0 limit means unlimited
	uint64 limit = 2;
	// created_at bounds, unixnano, [after, before)
	int64 before = 3;
	int64 after = 4;
}

message Transaction {
	uint64 id = 1;
	int64 created_at = 2;
	TransactionData data = 3;
}

message TransactionLogReply {
	repeated Transaction transactions = 1;
	string error = 2;
}
